Type-specific 10320/loc