@@ -59,6 +59,7 @@ import static org.mockito.Mockito.mockStatic;
 import com.fasterxml.jackson.databind.JsonNode;
 import eu.dissco.core.handlemanager.component.FdoRecordBuilder;
 import eu.dissco.core.handlemanager.domain.repsitoryobjects.HandleAttribute;
+import eu.dissco.core.handlemanager.domain.requests.vocabulary.ObjectType;
 import eu.dissco.core.handlemanager.domain.requests.vocabulary.PhysicalIdType;
 import eu.dissco.core.handlemanager.exceptions.InvalidRequestException;
 import eu.dissco.core.handlemanager.exceptions.PidCreationException;
@@ -92,6 +93,7 @@ class HandleServiceTest {
   private HandleService service;
   private List<byte[]> handles;
   private MockedStatic<Instant> mockedStatic;
+  private MockedStatic<Clock> mockedClock;
 
   @BeforeEach
   void setup() {
@@ -103,6 +105,7 @@ class HandleServiceTest {
   @AfterEach
   void destroy() {
     mockedStatic.close();
+    mockedClock.close();
   }
 
   @Test
@@ -110,7 +113,7 @@ class HandleServiceTest {
 
     byte[] handle = HANDLE.getBytes(StandardCharsets.UTF_8);
     String path = SANDBOX_URI + HANDLE;
-    List<HandleAttribute> recordAttributeList = genHandleRecordAttributes(handle);
+    List<HandleAttribute> recordAttributeList = genHandleRecordAttributes(handle, ObjectType.HANDLE);
 
     var responseExpected = givenRecordResponseReadSingle(HANDLE, path, "PID",
         genObjectNodeAttributeRecord(recordAttributeList));
@@ -145,7 +148,7 @@ class HandleServiceTest {
     String path = SANDBOX_URI;
     List<HandleAttribute> repositoryResponse = new ArrayList<>();
     for (byte[] handle : handles) {
-      repositoryResponse.addAll(genHandleRecordAttributes(handle));
+      repositoryResponse.addAll(genHandleRecordAttributes(handle, ObjectType.HANDLE));
     }
 
     given(handleRep.resolveHandleAttributes(anyList())).willReturn(repositoryResponse);
@@ -225,14 +228,14 @@ class HandleServiceTest {
     byte[] handle = handles.get(0);
     var request = genCreateRecordRequest(givenHandleRecordRequestObject(), RECORD_TYPE_HANDLE);
     var responseExpected = givenRecordResponseWrite(List.of(handle), RECORD_TYPE_HANDLE);
-    List<HandleAttribute> handleRecord = genHandleRecordAttributes(handle);
+    List<HandleAttribute> handleRecord = genHandleRecordAttributes(handle, ObjectType.HANDLE);
 
     given(hgService.genHandleList(1)).willReturn(new ArrayList<>(List.of(handle)));
     given(handleRep.resolveHandleAttributes(anyList())).willReturn(handleRecord);
-    given(fdoRecordBuilder.prepareHandleRecordAttributes(any(), any())).willReturn(handleRecord);
+    given(fdoRecordBuilder.prepareHandleRecordAttributes(any(), any(), eq(ObjectType.HANDLE))).willReturn(handleRecord);
 
     // When
-    var responseReceived = service.createRecords(Arrays.asList(request));
+    var responseReceived = service.createRecords(List.of(request));
 
     // Then
     assertThat(responseReceived).isEqualTo(responseExpected);
@@ -244,11 +247,11 @@ class HandleServiceTest {
     byte[] handle = handles.get(0);
     var request = genCreateRecordRequest(givenDoiRecordRequestObject(), RECORD_TYPE_DOI);
     var responseExpected = givenRecordResponseWrite(List.of(handle), RECORD_TYPE_DOI);
-    List<HandleAttribute> doiRecord = genDoiRecordAttributes(handle);
+    List<HandleAttribute> doiRecord = genDoiRecordAttributes(handle, ObjectType.HANDLE);
 
     given(hgService.genHandleList(1)).willReturn(new ArrayList<>(List.of(handle)));
     given(handleRep.resolveHandleAttributes(anyList())).willReturn(doiRecord);
-    given(fdoRecordBuilder.prepareDoiRecordAttributes(any(), any())).willReturn(doiRecord);
+    given(fdoRecordBuilder.prepareDoiRecordAttributes(any(), any(), eq(ObjectType.DOI))).willReturn(doiRecord);
 
     // When
     var responseReceived = service.createRecords(List.of(request));
@@ -268,7 +271,7 @@ class HandleServiceTest {
     given(hgService.genHandleList(1)).willReturn(new ArrayList<>(List.of(handle)));
     given(handleRep.resolveHandleAttributes(anyList())).willReturn(digitalSpecimen);
     given(handleRep.searchByPhysicalIdentifier(anyList())).willReturn(new ArrayList<>());
-    given(fdoRecordBuilder.prepareDigitalSpecimenRecordAttributes(any(), any())).willReturn(digitalSpecimen);
+    given(fdoRecordBuilder.prepareDigitalSpecimenRecordAttributes(any(), any(), eq(ObjectType.DIGITAL_SPECIMEN))).willReturn(digitalSpecimen);
 
     // When
     var responseReceived = service.createRecords(List.of(request));
@@ -367,7 +370,7 @@ class HandleServiceTest {
     List<JsonNode> requests = new ArrayList<>();
     for (byte[] handle : handles) {
       requests.add(genCreateRecordRequest(givenHandleRecordRequestObject(), RECORD_TYPE_HANDLE));
-      flatList.addAll(genHandleRecordAttributes(handle));
+      flatList.addAll(genHandleRecordAttributes(handle, ObjectType.HANDLE));
     }
 
     var responseExpected = givenRecordResponseWrite(handles, RECORD_TYPE_HANDLE);
@@ -390,7 +393,7 @@ class HandleServiceTest {
     List<JsonNode> requests = new ArrayList<>();
     for (byte[] handle : handles) {
       requests.add(genCreateRecordRequest(givenDoiRecordRequestObject(), RECORD_TYPE_DOI));
-      flatList.addAll(genDoiRecordAttributes(handle));
+      flatList.addAll(genDoiRecordAttributes(handle, ObjectType.DOI));
     }
 
     var responseExpected = givenRecordResponseWrite(handles, RECORD_TYPE_DOI);
@@ -568,7 +571,7 @@ class HandleServiceTest {
     // Given
     byte[] handle = HANDLE.getBytes(StandardCharsets.UTF_8);
     var updateRequest = genUpdateRequestBatch(List.of(handle));
-    var updatedAttributeRecord = genHandleRecordAttributesAltLoc(handle);
+    var updatedAttributeRecord = genHandleRecordAttributesAltLoc(handle, ObjectType.HANDLE);
     var responseExpected = givenRecordResponseWriteAltLoc(List.of(handle));
 
     given(handleRep.checkHandlesWritable(anyList())).willReturn(List.of(handle));
@@ -589,7 +592,7 @@ class HandleServiceTest {
 
     List<HandleAttribute> updatedAttributeRecord = new ArrayList<>();
     for (byte[] handle : handles) {
-      updatedAttributeRecord.addAll(genHandleRecordAttributesAltLoc(handle));
+      updatedAttributeRecord.addAll(genHandleRecordAttributesAltLoc(handle, ObjectType.HANDLE));
     }
 
     var responseExpected = givenRecordResponseWriteAltLoc(handles);
@@ -702,6 +705,8 @@ class HandleServiceTest {
     mockedStatic = mockStatic(Instant.class);
     mockedStatic.when(Instant::now).thenReturn(instant);
     mockedStatic.when(() -> Instant.from(any())).thenReturn(instant);
+    mockedClock = mockStatic(Clock.class);
+    mockedClock.when(Clock::systemUTC).thenReturn(clock);
   }
 
   private List<byte[]> initHandleList() {
